--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,18 @@
 			<version>4.5.2</version>
 		</dependency>
 
+		<!-- jsonPath -->
 		<dependency>
 			<groupId>com.jayway.jsonpath</groupId>
 			<artifactId>json-path</artifactId>
 			<version>2.3.0</version>
+		</dependency>
+		
+		<!-- mysql相关的 -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.38</version>
 		</dependency>
 	</dependencies>
 </project>
