--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java/lemon/day04/MoveTable.java=UTF-8
+encoding//src/main/java/lemon/day07/JsonChange.java=UTF-8
 encoding//src/main/java/lemon/day16/section01/All_Test_Case1.java=UTF-8
+encoding/<project>=UTF-8
